AQ-000 Switching log level to INFO and upgrading library versions.